2025-06-05T00:55:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15455900425 # 665
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
* notice: last 14d: unq all: 1 4
* notice: prev accum: outdated-unq outdated-all / unq all: 550 943 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 551 944 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-21] / []

2025-06-03T00:56:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15406036396 # 663
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-03
* notice: last 14d: unq all: 1 5
* notice: prev accum: outdated-unq outdated-all / unq all: 549 942 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 550 943 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-19] / []

2025-06-01T01:07:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15369334548 # 661
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-01
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 548 941 / 555 948
* notice: next accum: outdated-unq outdated-all / unq all: 549 942 / 555 948
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-18] / []

2025-05-31T00:54:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15358407935 # 660