@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-05T00:55:57Z",
-  "count_outdated" : 944,
-  "uniques_outdated" : 551,
+  "timestamp" : "2025-06-06T00:55:45Z",
+  "count_outdated" : 945,
+  "uniques_outdated" : 552,
   "count" : 948,
   "uniques" : 555,
   "clones" : [
-    {
-      "timestamp": "2025-05-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-23T00:00:00Z",
       "count": 1,
