@@ -1,3 +1,12 @@
+2025-06-06T00:55:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15480384678 # 666
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-06
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 551 944 / 555 948
+* notice: next accum: outdated-unq outdated-all / unq all: 552 945 / 555 948
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-22] / []
+
 2025-06-05T00:55:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15455900425 # 665
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-05
